fix: save default vmat_posts_per_page option on activation if option not already set. change z-index of van bar to 1 so it doesn't override datepicker. if first_name and last_name empty for a volunteer use suer_login in tables

--- a/admin/css/volunteer-management-and-tracking-admin.css
+++ b/admin/css/volunteer-management-and-tracking-admin.css
@@ -89,7 +89,7 @@
 	position: -webkit-sticky;
   	position: sticky;
   	top: 50px;
-  	z-index: 2000;
+  	z-index: 1;
   	background-color: #eee;
   	border-radius: 5px;
   	border-color: #007bff;
